# remotecc

./: .gitignore  .overcommit.yml  .travis.yml  CMakeLists.txt  README.md
ci/linux/: build.sh
cmake/: ImportedTarget.cmake  Workaround.cmake
develop/: generate-travis-yml.py
infra/: CMakeLists.txt  infra.cpp  infra.hpp  thirdparty_disable_warnings.hpp  thirdparty_restore_warnings.hpp
infra/infra/: assertion.hpp  datetime.hpp  logging.hpp  macro.hpp  numeric.hpp  string.hpp  types.hpp
src/: CMakeLists.txt  remotecc.cpp  remoteccd.cpp
src/core/: daemon_service.cpp  daemon_service.hpp  daemon_service_config.cpp  daemon_service_config.hpp  job.hpp
test/: CMakeLists.txt
test/infra/: module.cpp  test_assertion.cpp  test_string.cpp  test_types.cpp
